--- a/style.css
+++ b/style.css
@@ -5,4 +5,123 @@ html {
   box-sizing: inherit;
 }
 
+h1{
+  font-family: "Courier New", Courier, monospace;
+}
+
+main {
+  font-family: "Courier New", Courier, monospace;
+
+}
+.container {
+    position: relative;
+    width: 100%;
+    max-width: 200px;
+}
+
+.container img {
+    width: 100%;
+    height: auto;
+}
+
+.container .btn {
+
+    position: absolute;
+    top: 20%;
+    left:-97%;
+    transform: translate(80%, 380%);
+    -ms-transform: translate(80%, 80%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.container .btn:hover {
+    background-color: black;
+}
+.button {
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 30px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+
+.tryagainbutton {
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 23px;
+  padding: 15px;
+  width: 195px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 30px;
+}
+
+.tryagainbutton span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.tryagainbutton span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.tryagainbutton:hover span {
+  padding-right: 20px;
+}
+
+.tryagainbutton:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+
 /* Place your styles below */
